--- a/demo/index.html
+++ b/demo/index.html
@@ -21,6 +21,16 @@
   <button id="ID">
     CLICK FOR BY <code>#ID</code>
   </button>
+  <button class="ripley red">
+    CLICK FOR COLOR CLASS
+  </button>
+  <button class="ripley green">
+    CLICK FOR COLOR CLASS
+  </button>
+  <button class="ripley blue">
+    CLICK FOR COLOR CLASS
+  </button>
+
   <script src="../dist/ripley.dev.js"></script>
   <script>
     ripley.add(document.getElementById('ID'));
